# School_21_Projects

CPP_Projects/CPP1_s21_matrixplus-1/: CMakeLists.txt  readme.md
CPP_Projects/CPP1_s21_matrixplus-1/src/: Makefile  s21_matrix_oop.cc  s21_matrix_oop.h
CPP_Projects/CPP1_s21_matrixplus-1/src/tests/: calc_complements_tests.cc  constructor_tests.cc  determinant_tests.cc  eq_tests.cc  inverse_matrix_tests.cc  move_copy_tests.cc  mul_matrix_tests.cc  mul_number_tests.cc  set_get_tests.cc  sub_tests.cc  sum_tests.cc  transpose_tests.cc
CPP_Projects/CPP2_s21_containers-4/: CMakeLists.txt  readme.md
CPP_Projects/CPP2_s21_containers-4/src/: Makefile  s21_containers.h
CPP_Projects/CPP2_s21_containers-4/src/list/: s21_list.h  s21_list.tpp
CPP_Projects/CPP2_s21_containers-4/src/mapSet/map/: s21_map.h
CPP_Projects/CPP2_s21_containers-4/src/mapSet/rbTree/: s21_iterators.h  s21_rb_tree.h  s21_rb_tree.tpp
CPP_Projects/CPP2_s21_containers-4/src/mapSet/set/: s21_set.h
CPP_Projects/CPP2_s21_containers-4/src/queue/: s21_queue.h  s21_queue.tpp
CPP_Projects/CPP2_s21_containers-4/src/stack/: s21_stack.h  s21_stack.tpp
CPP_Projects/CPP2_s21_containers-4/src/tests/: list_tests.cc  map_tests.cc  queue_tests.cc  set_tests.cc  stack_tests.cc  vector_tests.cc
CPP_Projects/CPP2_s21_containers-4/src/vector/: s21_vector.h  s21_vector.tpp
CPP_Projects/CPP3_SmartCalc_v2.0-2/: CMakeLists.txt  readme.md
CPP_Projects/CPP3_SmartCalc_v2.0-2/src/: Makefile  main.cc  manual.html
CPP_Projects/CPP3_SmartCalc_v2.0-2/src/SmartCalc/: SmartCalc.pro  main.cpp  view.cpp  view.h  view.ui
CPP_Projects/CPP3_SmartCalc_v2.0-2/src/mvc/: controller.cc  controller.h  model.cc  model.h  stack.h  view.cc  view.h
CPP_Projects/CPP3_SmartCalc_v2.0-2/src/tests/: calc_tests.cc
CPP_Projects/CPP4_3DViewer_v2.0-1/: CMakeLists.txt  readme.md
CPP_Projects/CPP4_3DViewer_v2.0-1/src/: Makefile  main.cc  manual.html
CPP_Projects/CPP4_3DViewer_v2.0-1/src/3DViewer/: 3DViewer_v2.pro  OpenGLWidget.cc  OpenGLWidget.h  main.cc  view.cc  view.h  view.ui
CPP_Projects/CPP4_3DViewer_v2.0-1/src/Backend/: affine_facade.h  controller.h  data.cc  data.h  file.cc  file.h  model.cc  model.h  move_coordinates_context.h  rotate_coordinates_context.h  scaling.cc  scaling.h
CPP_Projects/CPP4_3DViewer_v2.0-1/src/tests/: move_coordinates_tests.cc  parser_tests.cc  rotate_coordinates_tests.cc  scaling_tests.cc
CPP_Projects/CPP4_3DViewer_v2.0-1/src/tests/files_txt/: fail3_cube.txt
C_Projects/C2_s21_stringplus-3/: readme.md
C_Projects/C2_s21_stringplus-3/src/: s21_sprintf.c  s21_sscanf.c
C_Projects/C2_s21_stringplus-3/src/new_tests/: test_me.c
C_Projects/C2_s21_stringplus-3/src/string_tests/: s21_string_tests.c  s21_string_tests.h
C_Projects/C3_SimpleBashUtils-1/cat/: cat.h  test.sh  test.txt  test_leaks.sh
C_Projects/C3_SimpleBashUtils-1/grep/: file.txt  grep.c  grep.h  s21_grep.c  test.txt  test_leaks.sh  tests.sh
C_Projects/C4_s21_math-5/src/: unitTests.c  unitTests.check
C_Projects/C5_s21_decimal-2/: readme.md
C_Projects/C5_s21_decimal-2/src/: s21_decimal.h  s21_decimal_arithmetic.c  s21_decimal_converters.c
C_Projects/C6_s21_matrix-1/: readme.md
C_Projects/C6_s21_matrix-1/src/: s21_matrix.h
C_Projects/C6_s21_matrix-1/src/tests/: s21_determinant_tests.c  s21_eq_matrix_tests.c  s21_sub_matrix_tests.c  s21_sum_matrix_tests.c  s21_tests.c  s21_tests.h
C_Projects/C7_SmartCalc_v1.0-2/: readme.md
C_Projects/C7_SmartCalc_v1.0-2/src/: Makefile  manual.html
C_Projects/C7_SmartCalc_v1.0-2/src/Backend/: smart_calc_v1.0.c  suppport.c
C_Projects/C7_SmartCalc_v1.0-2/src/SmartCalc/: mainwindow.h
C_Projects/C7_SmartCalc_v1.0-2/src/tests/: tests.c  tests.h
C_Projects/C8_3DViewer_v1.0-2/src/: Makefile
C_Projects/C8_3DViewer_v1.0-2/src/3DViewer_v1/: OpenGLWidget.cpp
C_Projects/C8_3DViewer_v1.0-2/src/Backend/: general.c
C_Projects/C8_3DViewer_v1.0-2/src/tests/: affine_tests.c  parser_tests.c  tests.c
C_Projects/C_Projects/C2_s21_stringplus-3/src/: Makefile  s21_string.c  s21_string.h
C_Projects/C_Projects/C3_SimpleBashUtils-1/: readme.md
C_Projects/C_Projects/C3_SimpleBashUtils-1/cat/: Makefile  cat.c
C_Projects/C_Projects/C3_SimpleBashUtils-1/grep/: Makefile  test.sh
C_Projects/C_Projects/C4_s21_math-5/: readme.md
C_Projects/C_Projects/C4_s21_math-5/src/: Makefile  s21_math.c  s21_math.h
C_Projects/C_Projects/C5_s21_decimal-2/src/: Makefile  s21_decimal.c  s21_decimal_big.c  s21_decimal_compare.c  s21_decimal_other.c
C_Projects/C_Projects/C8_3DViewer_v1.0-2/: readme.md
DevOps_Projects/DO2_LinuxNetwork-1/src/: report.md
DevOps_Projects/DO3_LinuxMonitoring_v1.0-1/: readme.md
DevOps_Projects/DO4_LinuxMonitoring_v2.0-1/: readme.md
DevOps_Projects/DO5_SimpleDocker-1/: readme.md
DevOps_Projects/DO5_SimpleDocker-1/src/: report.md
DevOps_Projects/DO6_CICD-1/: .gitlab-ci.yml  readme.md
DevOps_Projects/DO6_CICD-1/src/: Dockerfile  report.md
(+114 files in other folders)
